==> xiaokancheng/ElectricMagneticlocation/HARDWARE/ADS1256/ADS1256.c <==
#include <stdio.h>
#include "stm32f4xx.h"
#include "ADS1256.h"
#include "usart.h"
#include "stm32f4xx_hal_cortex.h"

void bsp_InitADS1256(void)
{
	GPIO_InitTypeDef  GPIO_InitStructure;

#ifdef  SOFT_SPI
    
	RESET_1();
	PWDN_1();
	CS_1();
	SCK_0();		/* SPI总线空闲时，钟线是低电平 */
	DI_1();
    
    
    __HAL_RCC_GPIOB_CLK_ENABLE();			                //使能GPIOB时钟

    GPIO_InitStructure.Pin = PIN_SCK | PIN_DIN | PIN_CS | PIN_RESET | PIN_PWDN;
    GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;          //普通推挽输出模式
    GPIO_InitStructure.Speed = GPIO_SPEED_HIGH;
    GPIO_InitStructure.Pull = GPIO_PULLUP;                  //上拉
    HAL_GPIO_Init(GPIOB, &GPIO_InitStructure);              //初始化GPIO

    GPIO_InitStructure.Pin = PIN_DOUT | PIN_DRDY;
    GPIO_InitStructure.Mode = GPIO_MODE_INPUT;          //普通推挽输出模式
    GPIO_InitStructure.Speed = GPIO_SPEED_HIGH;
    GPIO_InitStructure.Pull = GPIO_PULLUP;                  //上拉
    HAL_GPIO_Init(GPIOB, &GPIO_InitStructure);              //初始化GPIO

#endif
}

void ADS1256_StartScan(uint8_t _ucScanMode)
{
	g_tADS1256.ScanMode = _ucScanMode;
	/* 开始扫描前, 清零结果缓冲区 */
	{
		uint8_t i;

		g_tADS1256.Channel = 0;

		for (i = 0; i < 8; i++)
		{
			g_tADS1256.AdcNow[i] = 0;
		}
	}

	/* Enable GPIO clock */
    __HAL_RCC_GPIOB_CLK_ENABLE();             //开启GPIOB时钟
    
	/* Configure EXTI3 line */
    GPIO_Initure.Pin=PIN_DRDY;                //PB6
    GPIO_Initure.Mode=GPIO_MODE_IT_FALLING;     //下降沿触发
    GPIO_Initure.Pull=GPIO_PULLUP;
    
    /* Connect EXTI3 Line to PB6 pin */
    HAL_GPIO_Init(GPIOB,&GPIO_Initure);
    
	/* Enable and set EXTI3 Interrupt  priority */   
    HAL_NVIC_SetPriorityGrouping(NVIC_PRIORITYGROUP_2);
    HAL_NVIC_SetPriority(EXTI9_5_IRQn, 2, 0);
    HAL_NVIC_EnableIRQ(EXTI9_5_IRQn);
}

void ADS1256_StopScan(void)
{
	/* Configure EXTI3 line */
    GPIO_Initure.Pin=PIN_DRDY;                //PB6
    GPIO_Initure.Mode=GPIO_MODE_IT_FALLING;     //下降沿触发
    GPIO_Initure.Pull=GPIO_PULLUP;
    
    /* Connect EXTI3 Line to PB6 pin */
    HAL_GPIO_Init(GPIOB,&GPIO_Initure);
    
    __HAL_GPIO_EXTI_CLEAR_IT(PIN_DRDY);
    
	/* 中断优先级配置 最低优先级 这里一定要分开的设置中断，不能够合并到一个里面设置 */
    HAL_NVIC_SetPriorityGrouping(NVIC_PRIORITYGROUP_2);
    HAL_NVIC_SetPriority(EXTI9_5_IRQn, 2, 0);
    HAL_NVIC_DisableIRQ(EXTI9_5_IRQn);
}
